# Corewar

./: CMakeLists.txt  README.md  author  commands.c  commands.h  corewar.c  ft_get_int.c  manage_pc_list.c  parsing_comands.c  parsing_commands.c  vm.h
VirtualMachine/: Makefile  corewar  t  t1500  test3830  test4900  testo3830  testo4900  to  to1500
VirtualMachine/inc/: commands.h  op.h  parsing.h  visualization.h  vm.h
VirtualMachine/src/commands/: commands.c  ft_and.c  ft_and_dir_ind.c  ft_fork.c  ft_get_int.c  ft_ldi.c  ft_lld.c  ft_lldi.c  ft_load.c  ft_or.c  ft_or_dir_ind.c  ft_st.c  ft_sti.c  ft_sti_dir.c  ft_xor.c  ft_xor_dir_ind.c  parsing_commands.c
VirtualMachine/src/main_part/: choose_winner.c  corewar.c  end_game.c  main.c  manage_bot_list.c  manage_pc_list.c  manage_pc_list2.c
VirtualMachine/src/parsing/: extra_flag.c  get_bot_info.c  manage_arguments.c  parse_bot.c  parsing.c
VirtualMachine/src/visualization/: display_map.c  print_border.c  print_right_window.c
VirtualMachine/test/: tt.cor
VirtualMachine/vm_champs/: zork.cor
commands/: commands.c  ft_and.c  ft_and_dir_ind.c  ft_fork.c  ft_get_int.c  ft_ldi.c  ft_lld.c  ft_lldi.c  ft_load.c  ft_or.c  ft_or_dir_ind.c  ft_st.c  ft_sti.c  ft_sti_dir.c  ft_xor.c  ft_xor_dir_ind.c  parsing_commands.c
libft/: Makefile  get_next_line.h  libft.h
src/: choose_winner.c  commands.c  corewar.c  display_map.c  end_game.c  ft_and.c  ft_and_dir_ind.c  ft_fork.c  ft_get_int.c  ft_ldi.c  ft_lld.c  ft_lldi.c  ft_load.c  ft_or.c  ft_or_dir_ind.c  ft_st.c  ft_sti.c  ft_sti_dir.c  ft_xor.c  ft_xor_dir_ind.c  main.c  manage_bot_list.c  manage_map.c  manage_pc_list.c  manage_pc_list2.c  parsing_commands.c  t.s
src/commands/: commands.c  ft_and_dir_ind.c  ft_fork.c  ft_ldi.c  ft_lldi.c  ft_or_dir_ind.c  ft_sti_dir.c  ft_xor_dir_ind.c
src/main_part/: choose_winner.c  corewar.c  end_game.c  main.c  manage_map.c  manage_pc_list.c
src/parsing/: get_bot_info.c  manage_arguments.c  parse_bot.c  parse_bot_id.c  parsing.c
src/visualization/: display_map.c  print_border.c  print_right_window.c
